<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".HomeActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_app">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:letterSpacing="0.1"
                android:text="HOLA MARCOS"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginBottom="32dp"

                android:iconifiedByDefault="false"
                android:queryHint="Buscar socio por DNI..."/>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_socios"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="32dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="12dp"
                        android:text="@string/members"
                        android:textColor="#212121"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_socio" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_pagos"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="32dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="12dp"
                        android:text="@string/payments"
                        android:textColor="#212121"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_pagos" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_actividades"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="32dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="12dp"
                        android:text="@string/activities"
                        android:textColor="#212121"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_actividades" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_listado"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="32dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="12dp"
                        android:text="@string/list"
                        android:textColor="#212121"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_listados" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>